# InterReview

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: secrets.toml.example
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/routers/: evaluate.py  questions.py  stt.py
backend/app/services/: evaluate.py  questions.py  stt.py
backend/question_banks/ict/: domain_taxonomy.json  question_bank_index.json  rules.json
backend/question_banks/ict/experienced/: attitude__i_tech_orien.json  background__c_value.json  etc__c_sincere_job.json  personality__c_adp.json  personality__c_confl_mg.json  personality__c_cop.json  personality__c_imp.json
backend/question_banks/ict/new/: attitude__i_secty.json  attitude__i_tech_orien.json  background__c_private.json  etc__c_sincere_job.json  personality__c_adp.json  personality__c_chl.json  personality__c_confl_mg.json  personality__c_cop.json  technology__i_dis_coping.json  technology__i_prg.json
backend/tests/: test_config.py  test_evaluate.py  test_questions.py  test_stt.py
docs/: migration-plan.md  plan.md
frontend/app/: page.tsx
frontend/components/: AnalysisView.tsx  InterviewApp.tsx  InterviewView.tsx  SetupView.tsx
frontend/lib/: api.ts  recorder.ts  types.ts
module/: config.py  evaluate.py  eyetracking.py  kanana_llm.py  kanana_personalizer.py  question_generator.py  stt.py
page/: analysis_page.py  generation_page.py  input_page.py  interview_page.py  setup_page.py
(+15 files in other folders)
